Manage rgb process from python

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,13 +6,13 @@
 </head>
 
 <body>
-    <h1>FEDC RGB Display</h1>
+    <h1>FEDC GAMING DISPLAY</h1>
     {% if message %}
     <p>{{ message }}</p>
     {% endif %}
     <form method="post">
         <label for="textbox">Enter text:</label><br>
-        <textarea id="textbox" name="textbox" rows="50" cols="100">{{ default_text }}</textarea><br>
+        <textarea id="textbox" name="textbox" rows="30" cols="100">{{ default_text }}</textarea><br>
         <button type="submit">Update Display</button>
     </form>
 </body>
